# gradio-pdf

./: .gitignore  README.md  pyproject.toml
backend/gradio_pdf/: __init__.py  pdf.py
demo/: _app.py  app.py  requirements.txt
frontend/: Example.svelte  Index.svelte  PdfUploadText.svelte  gradio.config.js  package-lock.json  package.json
