[build-system]
requires = [
  "hatchling",
  "hatch-requirements-txt",
  "hatch-fancy-pypi-readme>=22.5.0",
]
build-backend = "hatchling.build"

[project]
name = "gradio_pdf"
version = "0.0.16"
description = "Easily display PDFs in Gradio"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
authors = [{ name = "Freddy Boulton", email = "alfonsoboulton@gmail.com" }]
keywords = [
  "Documents",
  "PDF",
  "Document QA",
  "gradio",
  "gradio custom component",
  "gradio-template-Fallback"
]
# Add dependencies here
dependencies = ["gradio>=4.0,<6.0"]
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: Apache Software License',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
  'Topic :: Scientific/Engineering :: Visualization',
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
repository = "https://github.com/freddyaboulton/gradio-pdf"
space = "https://huggingface.co/spaces/freddyaboulton/gradio_pdf"

[tool.hatch.build]
artifacts = ["/backend/gradio_pdf/templates", "*.pyi", "backend/gradio_pdf/templates", "backend/gradio_pdf/templates"]

[tool.hatch.build.targets.wheel]
packages = ["/backend/gradio_pdf"]
